--- a/frontend/static/templates/index.html
+++ b/frontend/static/templates/index.html
@@ -426,17 +426,13 @@
   <!-- container-scroller -->
   {{block "js" .}}
 
-  {{$volume :=  .JsonVolumeInspect }}
-
-  {{$usageGolang := .JsonUsageVolume }}
 
   <script>
-    var usagePercent = "{{$usageGolang.VolumeUsagePercent}}";
-    var availablePercent = "{{$usageGolang.VolumeAvailablePercent}}";
-    var usage = "{{$usageGolang.VolumeUsage}}";
-    var available = "{{$usageGolang.AvailableSpace}}";
-    var total = "{{$usageGolang.TotalSize}}";
-
+    var usagePercent = "{{.JsonVolumeInfo.VolumeInfo.VolumeUsedPercent}}";
+    var availablePercent = "{{.JsonVolumeInfo.VolumeInfo.VolumeAvailablePercent}}";
+    var usage = "{{.JsonVolumeInfo.VolumeInfo.VolumeUsedMB}}";
+    var available = "{{.JsonVolumeInfo.VolumeInfo.VolumeAvailable}}";
+    var total = "{{.JsonVolumeInfo.VolumeInfo.VolumeSizeMB}}";
   </script>
   <!-- plugins:js -->
   <script src="/frontend/static/templates/vendors/base/vendor.bundle.base.js"></script>
