--- a/frontend/static/templates/node-specific.html
+++ b/frontend/static/templates/node-specific.html
@@ -316,7 +316,7 @@
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card position-relative">
                 <div class="card-body">
-                  <h4 class="card-title">Volumes</h4>
+                  <h4 class="card-title">Volumes on this Node</h4>
                   <div class="table-responsive">
                     <table class="table table-striped">
                       <thead>
