--- a/frontend/static/templates/nodes.html
+++ b/frontend/static/templates/nodes.html
@@ -258,12 +258,12 @@
                             Storage available on node
                           </th>
                           <th>
-                            Percent used of storage
+                            Storage used
                           </th>
                         </tr>
                       </thead>
                       <tbody>
-                        {{ range $node := $AllNodesInfo }}
+                        {{ range $index, $node := $AllNodesInfo }}
                         <tr>
                           <td>
                             <a href="node/{{ $node.NodeID }}">{{ $node.NodeID }} </a>
@@ -271,16 +271,35 @@
                           <td>
                             {{ $node.NodeName }}
                           </td>
-                          <td>
-                            {{ $node.NodeStatus }}
+                          <td class="check-node" title="{{$node.NodeStatus}}">
+
+                            <div id="check-node-{{$index}}"> </div>
+
                           </td>
                           <td>
-                            {{ $node.SizeNodePool }} MB
+
+                            {{ if ne $node.SizeNodePool 0 }}
+
+                              {{  $node.SizeNodePool  }} MB
+                              
+                            {{ else }}
+
+                              Storageless Node
+
+                            {{ end }}
                           </td>
                           <td>
-                            <div class="progress">
+                              {{ if eq $node.SizeNodePool 0 }}
+
+                              {{ else }}
+                              <div class="progress">
+
                               <div class="progress-bar bg-success" role="progressbar" style="width: {{ $node.PercentUsedPool }}%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
+                              
+                              </div>
+
+                              {{ end }}
+
                           </td>
                         </tr>
                         {{ end }}
@@ -307,8 +326,54 @@
     <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
+
+  <script >
+
+    var elements = document.getElementsByClassName("check-node");
+
+    for (var i = 0; i < elements.length; i++) {
+
+      if(elements.item(i).title == "STATUS_OK") {
+
+        let btn = document.createElement("button");
+        btn.innerHTML = "Node Up";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-success btn-fw";
+        document.getElementById("check-node-" + i).appendChild(btn);
+
+        console.log("Node Up");
+
+      } else if (elements.item(i).value == "STATUS_STORAGE_DOWN" || elements.item(i).value == "STATUS_ERROR" || elements.item(i).value == "STATUS_DECOMMISSION" || elements.item(i).value == "STATUS_OFFLINE"  || elements.item(i).value == "STATUS_NONE") {
+        
+        let btn = document.createElement("button");
+        btn.innerHTML = "Node Down";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-danger btn-fw";
+        document.getElementById("check-node-" + i).appendChild(btn);
+
+        console.log("Node Down");
+
+      } else {
+
+        let btn = document.createElement("button");
+        btn.innerHTML = "Node Warning";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-warning btn-fw";
+        document.getElementById("check-node-" + i).appendChild(btn);
+
+        console.log("Node Warning");
+
+      } 
+    }
+
+  </script>
+
   {{block "js" .}}
   <!-- plugins:js -->
+
   <script src="/frontend/static/templates/vendors/base/vendor.bundle.base.js"></script>
 
   <!-- endinject -->
