--- a/frontend/static/templates/volume-specific.html
+++ b/frontend/static/templates/volume-specific.html
@@ -272,15 +272,15 @@
                           <div class="table-responsive mb-3 mb-md-0">
                             <table class="table table-borderless report-table">
                               <tr>
-                                <td class="font-weight-bold mb-0 w-50 px-0">Number of Replicas</td>
+                                <td class="font-weight-bold mb-0 w-50 px-0" >Volume Status:</td>
                                 <td class="w-50 px-0">
-                                  <h5 class="font-weight-normal mb-0">{{ $volume.VolumeReplicas }}</h5>
+                                  <h5 class="font-weight-normal mb-0" id="check-volume-status" title="{{ $volume.VolumeStatus  }}"></h5>
                                 </td>
                               </tr>
                               <tr>
-                                <td class="font-weight-bold mb-0 w-50 px-0">Volume Status:</td>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Number of Replicas</td>
                                 <td class="w-50 px-0">
-                                  <h5 class="font-weight-normal mb-0">{{ $volume.VolumeStatus }}</h5>
+                                  <h5 class="font-weight-normal mb-0">{{ $volume.VolumeReplicas }}</h5>
                                 </td>
                               </tr>
                               <tr>
@@ -296,6 +296,12 @@
                                 </td>
                               </tr>
                               <tr>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Device Path:</td>
+                                <td class="w-50 px-0">
+                                  <h5 class="font-weight-normal mb-0">{{$volume.VolumeDevicePath}}</h5>
+                                </td>
+                              </tr>
+                              <tr>
                                 <td class="font-weight-bold mb-0 w-50 px-0">Nodes where the volume have a replica:</td>
                               </tr>
                               {{ range $index, $replica := $volume.VolumeReplicaNodes}}
@@ -306,12 +312,6 @@
                                 </td>
                               </tr>
                               {{end}}
-                              <tr>
-                                <td class="font-weight-bold mb-0 w-50 px-0">Device Path:</td>
-                                <td class="w-50 px-0">
-                                  <h5 class="font-weight-normal mb-0">{{$volume.VolumeDevicePath}}</h5>
-                                </td>
-                              </tr>
                             </table>
                           </div>
                         </div>
@@ -338,6 +338,46 @@
     <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
+  <script >
+
+    var element = document.getElementById("check-volume-status");
+  
+      if(element.title == "VOLUME_STATUS_UP") {
+  
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Up";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-success btn-fw";
+        element.appendChild(btn);
+  
+        console.log("Volume Up");
+  
+      } else if (element.value == "VOLUME_STATUS_DEGRADED"  ) {
+        
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Degraded";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-warning btn-fw";
+        element.appendChild(btn);
+  
+        console.log("Volume Degraded");
+  
+      } else {
+  
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Down";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-danger btn-fw";
+        element.appendChild(btn);
+  
+        console.log("Volume Down");
+  
+      } 
+
+  </script>
   <script>
     var usagePercent = "{{.JsonVolumeInfo.VolumeInfo.VolumeUsedPercent}}";
     var availablePercent = "{{.JsonVolumeInfo.VolumeInfo.VolumeAvailablePercent}}";
