--- a/frontend/static/templates/volumes.html
+++ b/frontend/static/templates/volumes.html
@@ -272,7 +272,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {{ range $volume := $AllVolumesInfo }}
+                        {{ range $index, $volume := $AllVolumesInfo }}
                         <tr>
                           <td>
                             <a href="volume/{{ $volume.VolumeID }}">{{ $volume.VolumeID }} </a>
@@ -285,8 +285,8 @@
                           <td>
                             {{ $volume.VolumeReplicas }}
                           </td>
-                          <td>
-                            {{ $volume.VolumeStatus }}
+                          <td class="check-volume" title="{{$volume.VolumeStatus}}">
+                              <div id="check-volume-{{$index}}"> </div>
                           </td>
                           <td>
                             {{ $volume.VolumeAttachedOn }}
@@ -323,6 +323,50 @@
     </div>
     <!-- page-body-wrapper ends -->
   </div>
+  
+  <script >
+
+    var elements = document.getElementsByClassName("check-volume");
+
+    for (var i = 0; i < elements.length; i++) {
+
+      if(elements.item(i).title == "VOLUME_STATUS_UP") {
+
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Up";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-success btn-fw";
+        document.getElementById("check-volume-" + i).appendChild(btn);
+
+        console.log("Volume Up");
+
+      } else if (elements.item(i).value == "VOLUME_STATUS_DEGRADED"  ) {
+        
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Degraded";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-warning btn-fw";
+        document.getElementById("check-volume-" + i).appendChild(btn);
+
+        console.log("Volume Degraded");
+
+      } else {
+
+        let btn = document.createElement("button");
+        btn.innerHTML = "Volume Down";
+        btn.type = "button";
+        btn.name = "formBtn";
+        btn.classList = "btn btn-inverse-danger btn-fw";
+        document.getElementById("check-volume-" + i).appendChild(btn);
+
+        console.log("Volume Down");
+
+      } 
+    }
+
+  </script>
   <!-- container-scroller -->
   {{block "js" .}}
 
