--- a/frontend/static/templates/create-volume.html
+++ b/frontend/static/templates/create-volume.html
@@ -24,12 +24,9 @@
 
 <body>
 
-    {{block "content" .}}
-
-
     <div class="container-scroller">
         <div class="row p-0 m-0 proBanner" id="proBanner">
-            <div class="col-md-12 p-0 m-0">
+            <div class="col-lg-18 p-0 m-0">
                 <div class="card-body card-body-padding d-flex align-items-center justify-content-between">
                     <div class="ps-lg-1">
                     </div>
@@ -199,7 +196,6 @@
     <!-- Custom js for this page-->
     <script src="/frontend/static/templates/js/dashboard.js"> </script>
     <!-- End custom js for this page-->
-    {{end}}
     {{end}}
 </body>
 
